# rust-graphql

./: Cargo.toml
src/: main.rs
src/model/: mod.rs
src/observability/: metrics.rs  tracing.rs
src/routes/: mod.rs
